Table users {
  id bigint [pk, increment]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table products {
  id bigint [pk, increment]
  name varchar(200) [not null]
  price numeric(12,2) [not null, note: 'CHECK price > 0']
  stock int [not null, note: 'CHECK stock >= 0']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  status varchar(20) [not null, note: 'pending | confirmed | cancelled']
  total_amount numeric(12,2) [not null, default: 0]
  idempotency_key varchar(100) [not null]
  request_hash char(64) [not null, note: 'SHA-256 of normalized items']
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, idempotency_key) [unique, name: 'uq_orders_user_idempotency_key']
    expires_at [name: 'ix_orders_pending_expires_at', note: 'partial: WHERE status = pending']
  }
}

Table order_items {
  order_id bigint [not null, ref: > orders.id]
  product_id bigint [not null, ref: > products.id]
  quantity int [not null, note: 'CHECK quantity > 0']
  unit_price numeric(12,2) [not null, note: 'price snapshot at order time']

  indexes {
    (order_id, product_id) [pk]
  }
}